<resources>
    <string name="app_name">EspacioCultural</string>
    <string name="submit">submit</string>
    <string name="reserve">Reservar</string>
    <string name="modify">Modificar</string>
    <string name="cancel">Cancelar</string>
    <string name="titleGridView">Eventos programados</string>
    <string name="titleTypeEvent">Seleccionar el tipo de evento que quieres crear</string>
    <string name="peliEvent">PELÍCULA</string>
    <string name="concertEvent">CONCIERTO DE ÓPERA</string>
    <string name="debateEvent">DEBATE</string>
    <string name="baseEvent">OTRO</string>
    <string name="eventTitle">Introduce aquí el nombre del evento</string>
    <string name="typeCreateEvent">Introduce el tipo del evento</string>
    <string name="dateEvent">Introduce la fecha del evento</string>
    <string name="languageEvent">Introduce el idioma en el que será el evento</string>
    <string name="numCapacityEvent">Aforo numerado</string>
    <string name="maxCapacityEvent">Introduce el aforo máximo del evento</string>
    <string name="priceEvent">Introduce el precio del evento</string>
    <string name="Crear">Crear</string>
    <string name="modifyData">Modificar datos</string>
    <string name="save">Guardar</string>
    <string name="delete">Eliminar</string>
    <string name="startNUmber">1</string>
    <string name="maxCapacity">Aforo máximo: </string>
    <string name="ticketsReserved">Entradas reservadas: </string>
    <string name="userName">Nombre de usuario: </string>
    <string name="ticketsToReserve">"Indica el número de entradas a reservar: "</string>
    <string name="introduceUserName">Introduce el nombre de usuario para reservar tus entradas: </string>
    <string name="introduceTicketNumber">Número de entradas: </string>
    <string name="typeEvent">Tipo de evento: </string>
    <string name="dateHour">Fecha y hora: </string>
    <string name="language">Idioma: </string>
    <string name="numberedCapacity">Aforo numerado: </string>
    <string name="price">Precio: </string>
    <string name="participantsList">Lista de participantes: </string>
    <string name="directorName">Nombre del director: </string>
    <string name="premierYear">Año de estreno: </string>
    <string name="mainActorsList">Lista de actores principales: </string>
    <string name="duration">Duración: </string>
    <string name="compositorName">Nombre de compositor: </string>
    <string name="chorusName">Nombre del coro que acompaña: </string>
    <string name="orchestaName">Nombre de la orquesta que acompaña: </string>
    <string name="soloistList">Lista de los solistas principales: </string>
    <string name="directorNameEvent">Introduce el nombre del director</string>
    <string name="premiereYearEvent">Introduce el año de estreno</string>
    <string name="durationMovieEvent">Introduce el tiempo de duración (en minutos)</string>
    <string name="mainActorsListEvent">Introduce la lista de los actores principales</string>
    <string name="participantsListEvent">Introduce la lista de participantes</string>
    <string name="soloistListEvent">Introduce la lista de solistas principales</string>
    <string name="compositorNameEvent">Introduce el nombre del compositor</string>
    <string name="chorusNameEvent">Introduce el nombre del coro que los acompaña</string>
    <string name="orchestraNameEvent">Introduce el nombre de la orquesta</string>
    <string name="ticketsToRefund">Indica el número de entradas a devolver: </string>
    <string name="hourEvent">Introduce la hora del evento</string>
    <string name="ticketsReservedByUser">Tienes estos tickets reservados: </string>
</resources>