<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:layout_marginLeft="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modifyData"
            android:textSize="@dimen/title"
            android:textStyle="italic"
            android:layout_marginLeft="20dp"
            android:layout_gravity="start"/>

        <EditText
            android:id="@+id/eventName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/eventTitle"
            style="@style/title"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/imgModify"
            android:layout_width="0dp"
            android:layout_height="195dp"
            android:layout_weight="1"
            android:src="@drawable/cargar_imagen"
            android:layout_marginRight="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/marginCreate"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/marginLeft">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/typeEvent"
                    style="@style/appText"/>

                <EditText
                    android:id="@+id/eventType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/textSizeToFill"
                    android:hint="@string/typeCreateEvent"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/marginLeft">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dateHour"
                    style="@style/appText"/>

                <EditText
                    android:id="@+id/dateEvent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/textSizeToFill"
                    android:focusable="false"
                    android:hint="@string/dateEvent"
                    android:layout_marginRight="5dp"/>

                <EditText
                    android:id="@+id/hourEvent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/textSizeToFill"
                    android:focusable="false"
                    android:hint="@string/hourEvent"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/marginLeft">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/language"
                    style="@style/appText"/>

                <EditText
                    android:id="@+id/eventLanguage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/textSizeToFill"
                    android:hint="@string/languageEvent"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/marginLeft">

                <TextView
                    android:id="@+id/directorName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/directorName"
                    style="@style/appText"/>

                <EditText
                    android:id="@+id/directorNameEvent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/textSizeToFill"
                    android:visibility="gone"
                    android:hint="@string/directorNameEvent"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/marginLeft">

                <TextView
                    android:id="@+id/premierYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/appText"
                    android:visibility="gone"
                    android:text="@string/premierYear" />

                <EditText
                    android:id="@+id/premiereYearEvent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/textSizeToFill"
                    android:visibility="gone"
                    android:hint="@string/premiereYearEvent"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/marginLeft">

                <TextView
                    android:id="@+id/compositorName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/compositorName"
                    android:visibility="gone"
                    style="@style/appText"/>

                <EditText
                    android:id="@+id/compositorNameEvent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/textSizeToFill"
                    android:visibility="gone"
                    android:hint="@string/compositorNameEvent"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/marginLeft">

                <TextView
                    android:id="@+id/chorusName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/appText"
                    android:visibility="gone"
                    android:text="@string/chorusName" />

                <EditText
                    android:id="@+id/chorusNameEvent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/textSizeToFill"
                    android:visibility="gone"
                    android:hint="@string/chorusNameEvent"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/marginCreate"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/marginLeft">

                <CheckBox
                    android:id="@+id/numCapacityEvent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Aforo numerado"
                    style="@style/appText"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/marginLeft">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/maxCapacity"
                    style="@style/appText"/>

                <EditText
                    android:id="@+id/maxCapacityEvent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/textSizeToFill"
                    android:inputType="number"
                    android:hint="@string/maxCapacityEvent"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/marginLeft">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    style="@style/appText"/>

                <EditText
                    android:id="@+id/priceEvent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/textSizeToFill"
                    android:inputType="numberDecimal"
                    android:hint="@string/priceEvent"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/marginLeft">

                <TextView
                    android:id="@+id/movieDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/duration"
                    style="@style/appText"/>

                <EditText
                    android:id="@+id/durationMovieEvent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/textSizeToFill"
                    android:visibility="gone"
                    android:hint="@string/durationMovieEvent"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/marginLeft">

                <TextView
                    android:id="@+id/mainActorsList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/mainActorsList"
                    style="@style/appText"/>

                <EditText
                    android:id="@+id/mainActorsListEvent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/textSizeToFill"
                    android:visibility="gone"
                    android:hint="@string/mainActorsListEvent"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/marginLeft">

                <TextView
                    android:id="@+id/participantsList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/participantsList"
                    style="@style/appText"/>

                <EditText
                    android:id="@+id/participantsListEvent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/textSizeToFill"
                    android:visibility="gone"
                    android:hint="@string/participantsListEvent"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/marginLeft">

                <TextView
                    android:id="@+id/soloistList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/soloistList"
                    style="@style/appText"/>

                <EditText
                    android:id="@+id/soloistListEvent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/textSizeToFill"
                    android:visibility="gone"
                    android:hint="@string/soloistListEvent"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/marginLeft">

                <TextView
                    android:id="@+id/orchestraName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/orchestaName"
                    style="@style/appText"/>

                <EditText
                    android:id="@+id/orchestraNameEvent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/textSizeToFill"
                    android:visibility="gone"
                    android:hint="@string/orchestraNameEvent"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="2">

        <Button
            android:id="@+id/btnSave"
            android:text="@string/save"
            style="@style/buttonStyle"/>

        <Button
            android:id="@+id/btnDelete"
            android:text="@string/delete"
            style="@style/buttonStyle"/>

        <Button
            android:id="@+id/btnCancel"
            android:text="@string/cancel"
            style="@style/buttonStyle"/>

    </LinearLayout>

</LinearLayout>